recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:3: error: not found: value list
  if(list.tail==Nil){
     ^