recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  if(list.tail==Nil){
    return l.head;
  }
  return last(l.tail);
}